# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//420-delegate-service/src/main/java/io/harness/delegate/beans:module",
        "//420-delegate-service/src/main/java/io/harness/delegate/dto:module",
        "//420-delegate-service/src/main/java/io/harness/delegate/utils:module",
        "//920-delegate-service-beans:module",
        "//970-ng-commons/src/main/java/io/harness/beans/scope:module",
        "//970-ng-commons/src/main/java/io/harness/event:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/mapper:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//platform-service/modules/audit-service/contracts:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

run_analysis_per_module()
