# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//:mapstruct_proto",
        "//:mapstruct",
        "//931-secret-providers/src/java/software/wings/beans:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//954-connector-beans:module",
        "//970-api-services-beans/src/main/java/io/harness/azure:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/utils/identifierref:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_validation_validation_api",
    ] + [
        "//955-delegate-beans/src/main/proto/io/harness/delegate/core/beans:955_delegate_core_task_java_proto",
    ],
)

run_analysis_per_module()
