# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//890-sm-core/src/main/java/io/harness/secrets/dao:module",
        "//930-delegate-tasks/src/main/java/io/harness/beans:module",
        "//931-encryption-service/src/java/io/harness/exception:module",
        "//931-secret-providers/src/java/io/harness/beans:module",
        "//940-secret-manager-client:module",
        "//970-api-services-beans/src/main/java/io/harness/beans:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-api-services-beans/src/main/java/software/wings/settings:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/eraro:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_inject_guice",
        "@maven//:jakarta_validation_jakarta_validation_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_hibernate_validator_hibernate_validator",
    ],
)

run_analysis_per_module()
