# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/beans:module",
        "//127-cd-nextgen-entities:module",
        "//953-yaml-commons:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/pms/yaml:module",
        "//970-ng-commons/src/main/java/io/harness/security/annotations:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_intellij_annotations",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
)

run_analysis_per_module()
