# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//123-ng-core-user:module",
        "//400-rest/src/main/java/io/harness/delegate/beans:module",
        "//420-delegate-service/src/main/java/io/harness/delegate/beans:module",
        "//950-delegate-tasks-beans:module",
        "//954-connector-beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/user/remote/dto:module",
        "//970-ng-commons/src/main/java/io/harness/constants:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/beans:module",
        "//980-commons/src/main/java/software/wings/stencils:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_hibernate_validator_hibernate_validator",
    ],
)

run_analysis_per_module()
