# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager/src/main/java/io/harness/ng/core/eolbanner/dto:module",
        "//953-yaml-commons:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/template:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/pipeline-service/pms-client:module",
        "//clients/template-service:module",
        "//pipeline-service/modules/pms-contracts:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_inject_guice",
        "@maven//:com_intellij_annotations",
    ],
)

run_analysis_per_module()
