# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager/modules/ng-settings:module",
        "//120-ng-manager/modules/ng-settings/contracts:module",
        "//120-ng-manager/src/main/java/io/harness/ng/core/entities/migration:module",
        "//120-ng-manager/src/main/java/io/harness/ng/serviceaccounts/entities:module",
        "//120-ng-manager/src/main/java/io/harness/utils/featureflaghelper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/polling/bean:module",
        "//127-cd-nextgen-entities:module",
        "//440-connector-nextgen:module",
        "//890-sm-core:module",
        "//890-sm-delegate:module",
        "//931-encryption-service/src/java/io/harness/exception:module",
        "//931-secret-providers/src/java/io/harness/helpers:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//950-ng-core:module",
        "//950-ng-project-n-orgs:module",
        "//954-connector-beans:module",
        "//955-account-mgmt:module",
        "//955-setup-usage-sdk:module",
        "//956-feature-flag-beans:module",
        "//958-migration-sdk:module",
        "//960-persistence:module",
        "//960-persistence/src/main/java/io/harness/persistence:module",
        "//960-persistence/src/main/java/io/harness/persistence/api:module",
        "//970-api-services-beans/src/main/java/io/harness/git/model:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-ng-commons/src/main/java/io/harness:module",
        "//970-ng-commons/src/main/java/io/harness/constants:module",
        "//970-ng-commons/src/main/java/io/harness/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/encryption:module",
        "//980-commons/src/main/java/io/harness/eraro:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_intellij_annotations",
        "@maven//:dev_morphia_morphia_core",
        "@maven//:io_dropwizard_dropwizard_lifecycle",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_mongodb_mongo_java_driver",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
    ],
)

run_analysis_per_module()
