# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager/modules/ip-allowlist:module",
        "//120-ng-manager/modules/ip-allowlist/contracts:module",
        "//120-ng-manager/modules/ng-variables:module",
        "//120-ng-manager/modules/ng-variables/contracts:module",
        "//120-ng-manager/src/main/java/io/harness/ng/core/dto:module",
        "//120-ng-manager/src/main/java/io/harness/ng/core/events:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/events:module",
        "//127-cd-nextgen-entities:module",
        "//950-delegate-tasks-beans:module",
        "//953-events-api:module",
        "//953-events-api/src/main/proto:953_events_api_java_proto",
        "//955-outbox-sdk:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness:module",
        "//970-ng-commons/src/main/java/io/harness/beans/scope:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/mapper:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/utils:module",
        "//970-ng-commons/src/main/java/io/serializer/mapper:module",
        "//980-commons/src/main/java/io/harness/authorization:module",
        "//980-commons/src/main/java/io/harness/context:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/security/dto:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/audit:module",
        "//platform-service/modules/audit-service/contracts:module",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_intellij_annotations",
    ],
)

run_analysis_per_module()
