# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen:module",
        "//900-git-sync-sdk:module",
        "//960-persistence:module",
        "//970-api-services-beans/src/main/java/io/harness/servicenow:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/constants:module",
        "//970-ng-commons/src/main/java/io/harness/ng/beans:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/utils/identifierref:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_inject_guice",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

run_analysis_per_module()
