# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//878-ng-common-utilities:module",
        "//884-pms-commons:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//920-delegate-service-beans:module",
        "//930-delegate-tasks/src/main/java/io/harness/delegate/utils:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//950-ng-core:module",
        "//951-delegate-task-commons/src/main/java/io/harness/delegate/beans:module",
        "//951-delegate-task-commons/src/main/java/software/wings/beans:module",
        "//956-feature-flag-beans:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/errorhandling:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/utils/identifierref:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/exception/exceptionmanager:module",
        "//980-commons/src/main/java/io/harness/exception/exceptionmanager/exceptionhandler:module",
        "//980-commons/src/main/java/io/harness/manage:module",
        "@maven//:com_google_inject_guice",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

run_analysis_per_module()
