# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/common/resources:module",
        "//878-ng-common-utilities:module",
        "//890-sm-core:module",
        "//950-delegate-tasks-beans:module",
        "//951-delegate-task-commons/src/main/java/io/harness/delegate/beans:module",
        "//951-delegate-task-commons/src/main/java/software/wings/beans:module",
        "//953-events-api:module",
        "//953-events-api/src/main/proto:953_events_api_java_proto",
        "//954-connector-beans:module",
        "//970-api-services-beans/src/main/java/io/harness/aws:module",
        "//970-api-services-beans/src/main/java/io/harness/logging:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entityusageactivity:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/software/wings/utils:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_amazonaws_aws_java_sdk_cloudformation",
        "@maven//:com_amazonaws_aws_java_sdk_ec2",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

run_analysis_per_module()
