# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/dto:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/pojos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/utils:module",
        "//126-instance:module",
        "//945-license-usage-sdk:module",
        "//960-ng-license-usage-beans:module",
        "//970-ng-commons/src/main/java/io/harness:module",
        "//970-ng-commons/src/main/java/io/harness/beans/scope:module",
        "//970-ng-commons/src/main/java/io/harness/cd:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//980-commons/src/main/java/software/wings/utils:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

run_analysis_per_module()
