# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//890-sm-core/src/main/java/io/harness/ng/core/models:module",
        "//890-sm-delegate:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/activityhistory:module",
        "//970-api-services-beans/src/main/java/io/harness/security/encryption:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//980-commons/src/main/java/io/harness/beans:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
    ],
)

run_analysis_per_module()
